<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/solar_background"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:backgroundTint="@color/colorPrimary">


    <ImageView
        android:id="@+id/CMoney_Icon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/cmoney" />


    <LinearLayout
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/CMoney_Icon">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_account"
            android:textSize="24sp"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/edit_account"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:background="@drawable/edit_text_round"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/account">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_password"
            android:textSize="24sp"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:background="@drawable/edit_text_round"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="239dp"
        android:layout_marginTop="421dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="98dp"
        android:text="@string/login_btn"
        android:textSize="18sp" />

</RelativeLayout>